--- a/modules/components/header.html
+++ b/modules/components/header.html
@@ -9,9 +9,8 @@
 						<source srcset="
                     https://mdbootstrap.com/wp-content/themes/mdbootstrap4/content/en/_mdb5/standard/about/assets/mdb5-about.webp
                   " type="image/webp">
-						<img
-							src="https://mdbootstrap.com/wp-content/themes/mdbootstrap4/content/en/_mdb5/standard/about/assets/mdb5-about.jpg"
-							class="img-fluid shadow-5 rounded-lg" alt="MDB 5 - Bootstrap 5 &amp; Material Design 2.0">
+						<img src="./src/img/undraw_responsive_6c8s.svg" class="img-fluid shadow-5 rounded-lg"
+							alt="MDB 5 - Bootstrap 5 &amp; Material Design 2.0">
 					</picture>
 				</div>
 				<!--Grid column-->
@@ -26,7 +25,7 @@
 
 					<div class="pl-lg-3">
 						<p>
-							<strong>All the templates were created with MDB 5 UI KIT</strong>
+							<strong>AMDB 5 UI KIT</strong>
 							(Material Design for Bootstrap 5).
 						</p>
 
