Modificacion de pagina inicial

--- a/modules/components/header.html
+++ b/modules/components/header.html
@@ -6,7 +6,6 @@
 				<!--Grid column-->
 				<div class="col-lg-7 mb-4 p-2">
 					<picture>
-
 						<img src="./src/img/undraw_responsive_6c8s.svg" class="img-fluid shadow-5 rounded-lg"
 							alt="MDB 5 - Bootstrap 5 &amp; Material Design 2.0">
 					</picture>
@@ -22,23 +21,25 @@
 					</style>
 
 					<div class="pl-lg-3">
+						<h1>Pagina en Construcción</h1><br>
+						Somos solución en <strong>desarrollo web</strong>
+						<p>Creamos tu web con la tecnologia mas reciente.!</p>
+						<p class="lista">
+							<i class="fab fa-bootstrap display-2 mr-2"></i>
+							<i class="fab fa-js display-2 mr-2"></i>
+							<i class="fab fa-mdb display-2  mr-2"></i>
+							<i class="fab fa-php display-2 mr-2"></i>
+							<i class="fab fa-html5 display-2"></i>
+						</p>
 						<p>
-							<strong>AMDB 5 UI KIT</strong>
-							(Material Design for Bootstrap 5).
+							Tecnologia <strong>nueva</strong> creacion de base de datos, mantenimiento y soporte 24/7, mejores precio
+							del mercado.
 						</p>
 
-						<p>
-							MDB is a <strong>free</strong> (MIT license) library, that provides
-							extra features and significantly extends Bootstrap's capabilities.
-						</p>
+						<a class=" btn btn-outline-dark btn-lg mr-2" data-ripple-color="dark"
+							href="/docs/standard/getting-started/installation/" role="button">Contactanos</a>
 
-						<a class="btn btn-danger bg-theme btn-lg mr-2" href="/docs/standard/getting-started/installation/"
-							role="button">Download MDB<i class="fas fa-download ml-2"></i></a>
-
-						<a class="btn btn-primary btn-lg mr-2" href="/docs/standard/" role="button">Demo</a>
-
-						<a class="btn btn-dark btn-lg px-3" href="https://github.com/mdbootstrap/mdb-ui-kit" target="_blank"
-							rel="nofollow" role="button"><i class="fab fa-github"></i></a>
+						<a class="btn btn-primary btn-lg mr-2" href="/docs/standard/" role="button">saber mas</a>
 					</div>
 				</div>
 				<!--Grid column-->
